# bit7z

./: .gitignore  .gitmodules  Bit7z.pro  CMakeLists.txt  README.md  STYLE  ZTest.pro  _config.yml  annotated.html  annotated_dup.js  appveyor.yml  bit7z.pro  bit7z.vcxproj  bit7z_8hpp_source.html  bit7zlibrary_8hpp_source.html  bit7zlibraryloader_8hpp_source.html  bitabstractarchivecreator_8hpp_source.html  bitabstractarchivehandler_8hpp_source.html  bitabstractarchiveopener_8hpp_source.html  bitarchiveeditor_8hpp_source.html  bitarchiveitem_8hpp_source.html  bitarchiveiteminfo_8hpp_source.html  bitarchiveitemoffset_8hpp_source.html  bitarchivereader_8hpp_source.html  bitarchivewriter_8hpp_source.html  bitcompressionlevel_8hpp_source.html  bitcompressionmethod_8hpp_source.html  bitcompressor_8hpp_source.html  bitdefines_8hpp_source.html  biterror_8hpp_source.html  bitexception_8hpp_source.html  bitextractor_8hpp_source.html  bitfilecompressor_8hpp_source.html  bitfileextractor_8hpp_source.html  bitformat_8hpp_source.html  bitfs_8hpp_source.html  bitgenericitem_8hpp_source.html  bitindicesview_8hpp_source.html  bitinputarchive_8hpp_source.html  bitinputitem_8hpp_source.html  (+283 more)
.github/: FUNDING.yml  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  feature_request.md  feature_request.yml
.github/workflows/: ctest.yml  test_macos.yml  test_ubuntu.yml  test_ubuntu22.yml  test_ubuntu24.yml  test_ubuntu24_arm.yml  test_windows.yml  test_windows19.yml  test_windows22.yml  test_windows25.yml
cmake/: BuildOptions.cmake  CompilerOptions.cmake  Dependencies.cmake  Filesystem.cmake  FilesystemDetect.cmake  Install.cmake  OutputOptions.cmake  Sanitizers.cmake  bit7zConfig.cmake.in
doc/: Doxyfile  index.html
doc/html/: annotated.html  bit7z_8hpp_source.html  bit7zlibrary_8hpp_source.html  bitcompressionlevel_8hpp_source.html  bitcompressor_8hpp_source.html  bitexception_8hpp_source.html  bitextractor_8hpp_source.html  bitformat_8hpp_source.html  bitguids_8hpp_source.html  callback_8hpp_source.html  classbit7z_1_1_bit7z_library-members.html  classbit7z_1_1_bit7z_library.html  classbit7z_1_1_bit_compressor-members.html  classbit7z_1_1_bit_compressor.html  classbit7z_1_1_bit_exception-members.html  classbit7z_1_1_bit_exception.html  classbit7z_1_1_bit_extractor-members.html  (+19 more)
docs/: CMakeLists.txt  Doxyfile  Doxyfile.in
include/: CArchiveExtractCallback.h  CArchiveOpenCallback.h  CArchiveUpdateCallback.h  bit7z.hpp  bit7zlibrary.hpp  bitabstractarchivecreator.hpp  bitabstractarchivehandler.hpp  bitabstractarchiveopener.hpp  bitarchivecreator.hpp  bitarchiveeditor.hpp  bitarchivehandler.hpp  bitarchiveinfo.hpp  bitarchiveitem.hpp  bitarchiveiteminfo.hpp  bitarchiveitemoffset.hpp  bitarchiveopener.hpp  bitarchivereader.hpp  bitarchivewriter.hpp  bitcompressionlevel.hpp  bitcompressionmethod.hpp  bitcompressor.hpp  bitdefines.hpp  biterror.hpp  bitexception.hpp  bitextractor.hpp  bitfilecompressor.hpp  bitfileextractor.hpp  bitfilesystem.hpp  bitformat.hpp  bitfs.hpp  bitgenericitem.hpp  bitguids.hpp  bitinputarchive.hpp  bititemsvector.hpp  bitmemcompressor.hpp  bitmemextractor.hpp  bitoutputarchive.hpp  bitpropvariant.hpp  bitstreamcompressor.hpp  bitstreamextractor.hpp  (+41 more)
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1b.js  all_1c.js  all_1d.js  all_1e.js  all_1f.js  all_2.js  all_20.js  all_22.js  all_23.js  all_24.js  all_25.js  all_26.js  all_27.js  all_28.js  all_29.js  all_2a.js  all_2b.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  (+138 more)
src/: CArchiveExtractCallback.cpp  CArchiveOpenCallback.cpp  CArchiveUpdateCallback.cpp  bit7zlibrary.cpp  bit7zlibraryloader.cpp  bitabstractarchivecreator.cpp  bitabstractarchivehandler.cpp  bitabstractarchiveopener.cpp  bitarchivecreator.cpp  bitarchiveeditor.cpp  bitarchivehandler.cpp  bitarchiveinfo.cpp  bitarchiveitem.cpp  bitarchiveiteminfo.cpp  bitarchiveitemoffset.cpp  bitarchiveopener.cpp  bitarchivereader.cpp  bitarchivewriter.cpp  bitcompressor.cpp  biterror.cpp  bitexception.cpp  bitextractor.cpp  bitfilecompressor.cpp  bitfilesystem.cpp  bitformat.cpp  bitgenericitem.cpp  bitguids.cpp  bitinputarchive.cpp  bitinputitem.cpp  bititemsvector.cpp  bitmemcompressor.cpp  bitmemextractor.cpp  bitnestedarchivereader.cpp  bitoutputarchive.cpp  bitpropvariant.cpp  bitsharedlibrary.cpp  bitstreamcompressor.cpp  bitstreamextractor.cpp  bittypes.cpp  bufferextractcallback.cpp  (+37 more)
stylesheets/: styles.css
test/: CMakeLists.txt  main.cpp  test.pro
test/cmake/: Catch2.cmake
test/src/: filesystem.hpp  shared_lib.hpp  test_bit7zlibrary.cpp
tests/: CMakeLists.txt
tests/cmake/: Sanitizers.cmake
tests/res/: encoding.rc  encodingLegacy.manifest  encodingLegacy.rc
tests/src/: archive.cpp  archive.hpp  compiler.hpp  filesystem.cpp  filesystem.hpp  flags.hpp  format.hpp  main.cpp  shared_lib.hpp  test_bit7zlibrary.cpp  test_bit7zlibraryloader.cpp  test_bitabstractarchivecreator.cpp  test_bitarchiveeditor.cpp  test_bitarchiveiteminfo.cpp  test_bitarchivereader.cpp  test_bitarchivewriter.cpp  test_biterror.cpp  test_bitexception.cpp  test_bitfilecompressor.cpp  test_bitfileextractor.cpp  test_bitindicesview.cpp  test_bitinputarchive.cpp  test_bitinputitem.cpp  test_bititemsvector.cpp  test_bitmemcompressor.cpp  test_bitmemextractor.cpp  test_bitnestedarchivereader.cpp  test_bitoutputarchive.cpp  test_bitpropvariant.cpp  test_bitstreamcompressor.cpp  test_bitstreamextractor.cpp  test_cbufferinstream.cpp  test_cbufferoutstream.cpp  test_cfileinstream.cpp  test_cfileoutstream.cpp  test_cfixedbufferoutstream.cpp  test_cmultivolumeinstream.cpp  test_cmultivolumeoutstream.cpp  test_cpp26.cpp  test_cstdinstream.cpp  (+9 more)
tests/src/utils/: archive.cpp  archive.hpp  compiler.hpp  crc.cpp  crc.hpp  datetime.hpp  exception.hpp  filesystem.cpp  filesystem.hpp  flags.hpp  format.hpp  shared_lib.hpp  source_location.hpp  sourcelocation.hpp  test.hpp
(+223 files in other folders)
